# voice-insight

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: calls.py  insights.py
backend/app/core/: config.py  db.py
